<resources>
    <string name="app_name">Feasty</string>
    <string name="meal_name">Meal Name</string>
    <string name="foods">Foods</string>
    <string name="food_quantity">Food Quantity</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="calories">Calories</string>
    <string name="food_name">Food Name</string>
    <string name="food_unit">Food Unit</string>
    <string name="done">Done</string>
    <string name="add_food">Add Food</string>
    <string name="edit_food">Edit Food</string>
    <string name="all_foods">All Foods</string>
    <string name="all_meals">All Meals</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="serving_size">Serving Size:</string>
    <string name="select_food">Select Food</string>
    <string name="select_food_quantity">Select Food Quantity</string>
    <string name="view_more">View More</string>
    <string name="dropdown">Dropdown</string>
    <string name="macro_nutrients">Macro Nutrients</string>
    <string name="unit_type">Unit Type</string>
    <string name="select_meal_plan">Select Meal Plan</string>
    <string name="meal_plan_name">Meal Plan Name</string>
    <string name="edit_meal_plan">"Edit Meal Plan"</string>
    <string name="new_meal_plan">"New Meal Plan"</string>
    <string name="required_carbohydrates">Required Carbohydrates</string>
    <string name="required_fat">Required Fat</string>
    <string name="required_protein">Required Protein</string>
    <string name="required_calories">Required Calories</string>
    <string name="delete_meal_plan">Delete Meal Plan</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="no_meal_plan_meals">There are no meals for this meal plan. Add some?</string>
    <string name="select_item">Select Item</string>
    <string name="select_meal">Select Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="add_meal">Add Meal</string>
    <string name="add_item">Add Item</string>
    <string name="current_meal_plan">Current Meal Plan</string>
    <string name="network_error">Unable to fetch data from the server. Check your internet connection.</string>
    <string name="database_error">Unable to fetch your data from the database.</string>
    <string name="unknown_error">Unknown error. Please try this operation again later.</string>
    <string name="no_meal_plan_selected_cant_add_meal">Can\'t add meal. No meal plan selected.</string>
    <string name="desired_serving_size">Desired Serving Size</string>
    <string name="edit_meal_food">Edit Meal Food</string>

    <!-- Form validator strings -->
    <!-- Food form -->
    <string name="please_enter_title">Please enter a title</string>
    <string name="serving_size_quantity_must_be_greater_than_zero">Serving size quantity must be more than zero</string>
    <string name="meal_must_have_at_least_one_food">A meal must have at least one food</string>

    <!-- Prompt dialog -->
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete_this_food">This food may be used in other meals, are you sure you want to delete it?</string>
    <string name="are_you_sure_you_want_to_delete_this_meal">This meal might be used by other meal plans. Are you sure you want to delete it?</string>

</resources>
