<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mealPlan"
            type="com.darrenfinch.mymealplanner.mealplans.models.presentation.UiMealPlan" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/formInputsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
                mealPlanNameEditTextLayout,
                requiredCaloriesEditTextLayout,
                requiredProteinEditTextLayout,
                requiredFatEditTextLayout,
                requiredCarbohydratesEditTextLayout,
                doneButton" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_nav_up"
            app:title="@string/new_meal_plan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mealPlanNameEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mealPlanNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal_plan_name"
                android:text="@{mealPlan.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requiredCaloriesEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealPlanNameEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/requiredCaloriesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/required_calories"
                android:inputType="number"
                android:text="@{String.valueOf(mealPlan.requiredCalories)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requiredProteinEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requiredCaloriesEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/requiredProteinEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/required_protein"
                android:inputType="number"
                android:text="@{String.valueOf(mealPlan.requiredProteins)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requiredFatEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requiredProteinEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/requiredFatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/required_fat"
                android:inputType="number"
                android:text="@{String.valueOf(mealPlan.requiredFats)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/requiredCarbohydratesEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requiredFatEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/requiredCarbohydratesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/required_carbohydrates"
                android:inputType="number"
                android:text="@{String.valueOf(mealPlan.requiredCarbs)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requiredCarbohydratesEditTextLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
