<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="food"
            type="com.darrenfinch.mymealplanner.foods.models.presentation.UiFood" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.foodform.controller.FoodFormFragment">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/formInputsGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="
                foodNameEditTextLayout,
                caloriesEditTextLayout,
                carbohydratesEditTextLayout,
                fatsEditTextLayout,
                proteinsEditTextLayout,
                foodQuantityEditTextLayout,
                measurementUnitSpinner,
                measurementTypeSpinner,
                doneButton" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_nav_up"
            app:title="@string/edit_food" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/foodNameEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/foodNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_name"
                android:text="@{food.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/caloriesEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/caloriesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calories"
                android:inputType="number"
                android:text="@{String.valueOf(food.macroNutrients.calories)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/carbohydratesEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caloriesEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/carbohydratesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/carbohydrates"
                android:inputType="number"
                android:text="@{String.valueOf(food.macroNutrients.carbs)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fatsEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carbohydratesEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fatsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fats"
                android:inputType="number"
                android:text="@{String.valueOf(food.macroNutrients.fats)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/proteinsEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fatsEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/proteinsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/protein"
                android:inputType="number"
                android:text="@{String.valueOf(food.macroNutrients.proteins)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/foodQuantityEditTextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintEnd_toStartOf="@+id/measurementUnitSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proteinsEditTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/foodQuantityEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/food_quantity"
                android:inputType="numberDecimal"
                android:text="@{String.valueOf(food.servingSize.quantity)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/measurementUnitSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/standard_margin"
            app:layout_constraintBottom_toBottomOf="@+id/foodQuantityEditTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/foodQuantityEditTextLayout" />

        <TextView
            android:id="@+id/textView"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/unit_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodQuantityEditTextLayout" />

        <Spinner
            android:id="@+id/measurementTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/foodQuantityEditTextLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/measurementTypeSpinner" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
